infra/cfn/security.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Security Groups

Parameters:
  AppPort:
    Type: Number
    Default: 80
  DBPort:
    Type: Number
    Default: 5432

Resources:
  AlbSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALB SG
      VpcId: !ImportValue VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  Ec2SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 SG
      VpcId: !ImportValue VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref AppPort
          ToPort: !Ref AppPort
          SourceSecurityGroupId: !Ref AlbSG

  RdsSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS SG
      VpcId: !ImportValue VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref DBPort
          ToPort: !Ref DBPort
          SourceSecurityGroupId: !Ref Ec2SG

  RedisSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Redis SG
      VpcId: !ImportValue VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          SourceSecurityGroupId: !Ref Ec2SG

Outputs:
  AlbSGId:
    Description: "ALB Security Group ID"
    Value: !Ref AlbSG
    Export:
      Name: AlbSG

  Ec2SGId:
    Description: "EC2 Security Group ID"
    Value: !Ref Ec2SG
    Export:
      Name: Ec2SG

  RdsSGId:
    Description: "RDS Security Group ID"
    Value: !Ref RdsSG
    Export:
      Name: RdsSG

  RedisSGId:
    Description: "Redis Security Group ID"
    Value: !Ref RedisSG
    Export:
      Name: RedisSG
